--- a/social-links-profile/styles.css
+++ b/social-links-profile/styles.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
 body{
+  font-family: 'Inter', sans-serif;
+  background-color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 100%);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,8 +13,43 @@ body{
 
 .container{
   text-align: center;
+  background-color: hsl(0, 0%, 12%);
+  padding: 40px 0px;
+  width: 300px;
+  border-radius: 10px;
+}
+
+img{
+  width: 100px;
+  border-radius: 50%;
+}
+
+h5{
+  margin-top: -10px;
+  color: hsl(75, 94%, 57%);
+}
+
+p{
+  font-size: 12px;
+  margin-bottom: 26px;
 }
 
 a{
   display: block;
+  text-decoration: none;
+  margin: 0 20px;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 20%);
+  margin-bottom: 14px;
+  padding: 10px 0;
+  border-radius: 6px;
+}
+
+a:active{
+  color: hsl(0, 0%, 12%);
+  background-color: hsl(75, 94%, 57%);
+}
+
+a:last-child{
+  margin-bottom: 0;
 }
