--- a/faq-accordion-main/src/main.css
+++ b/faq-accordion-main/src/main.css
@@ -4572,7 +4572,6 @@ textarea.form-control-lg {
 }
 .accordion-button:not(.collapsed) {
   color: var(--bs-accordion-active-color);
-  background-color: var(--bs-accordion-active-bg);
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 .accordion-button:not(.collapsed)::after {
@@ -4601,7 +4600,6 @@ textarea.form-control-lg {
 .accordion-button:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: var(--bs-accordion-btn-focus-box-shadow);
 }
 
 .accordion-header {
@@ -4611,7 +4609,7 @@ textarea.form-control-lg {
 .accordion-item {
   color: var(--bs-accordion-color);
   background-color: var(--bs-accordion-bg);
-  border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+  border: 0;
 }
 .accordion-item:first-of-type {
   border-top-left-radius: var(--bs-accordion-border-radius);
@@ -11973,6 +11971,17 @@ textarea.form-control-lg {
 }
 body {
   font-family: "Work Sans", sans-serif;
+  background-color: hsl(275, 100%, 97%);
+}
+
+main {
+  position: relative;
+  max-width: 320px;
+  margin: -100px auto 0;
+  padding: 40px 20px;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 10px;
+  box-shadow: 2px 2px 15px 5px rgba(0, 0, 0, 0.2);
 }
 
 .accordion-button::after { /* Target pseudo-element for arrows */
@@ -11983,6 +11992,13 @@ body {
   display: flex;
   align-items: center;
   position: relative;
+  font-size: 14px;
+  font-weight: 700;
+  padding-left: 0px;
+  color: hsl(292, 42%, 14%);
+}
+.accordion-button:active {
+  color: hsl(292, 16%, 49%) !important;
 }
 .accordion-button span {
   position: absolute;
