Fixing the FAQ logo

--- a/faq-accordion-main/src/main.css
+++ b/faq-accordion-main/src/main.css
@@ -11974,6 +11974,15 @@ body {
   background-color: hsl(275, 100%, 97%);
 }
 
+.faq-header {
+  display: flex;
+  align-items: center;
+}
+.faq-header h1, .faq-header .h1 {
+  margin-left: 1.6rem;
+  font-weight: 800;
+}
+
 main {
   position: relative;
   max-width: 320px;
