--- a/faq-accordion-main/src/main.css
+++ b/faq-accordion-main/src/main.css
@@ -12031,6 +12031,10 @@ button {
   color: hsl(292, 42%, 14%) !important;
 }
 
+.accordion-body {
+  color: hsl(292, 16%, 49%);
+}
+
 @media screen and (min-width: 376px) {
   #mobile-bg {
     display: none;
