--- a/faq-accordion-main/src/main.css
+++ b/faq-accordion-main/src/main.css
@@ -12031,6 +12031,14 @@ button {
   color: hsl(292, 42%, 14%) !important;
 }
 
+button:hover {
+  color: #AD28EB !important;
+}
+
+button:active {
+  color: #AD28EB !important;
+}
+
 .accordion-body {
   color: hsl(292, 16%, 49%);
 }
