--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -28,6 +28,7 @@ main {
   border-radius: 15px;
   display: flex;
   flex-direction: column;
+  max-width: 375px;
 }
 
 .bill-section {
@@ -63,4 +64,42 @@ main {
 .select-tip p {
   font-weight: 700;
   margin-top: 2em;
+}
+.select-tip .tips {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  width: 100%;
+}
+.select-tip button {
+  font-family: "Space Mono", monospace;
+  font-size: 24px;
+  width: 100%;
+  padding: 0.4em 0;
+  font-weight: 700;
+  border: none;
+  box-sizing: border-box;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(183, 100%, 15%);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
+}
+.select-tip button:hover, .select-tip button :active {
+  background-color: hsl(172, 67%, 45%);
+  color: hsl(183, 100%, 15%);
+}
+.select-tip input {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: hsl(189, 41%, 97%);
+  color: hsl(183, 100%, 15%);
+  text-align: right;
+  font-size: 24px;
+  font-weight: 700;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding-right: 10px;
+  font-family: "Space Mono", monospace;
 }/*# sourceMappingURL=main.css.map */
