--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -102,4 +102,32 @@ main {
   border: none;
   padding-right: 10px;
   font-family: "Space Mono", monospace;
+}
+
+.num-of-ppl {
+  margin: 1.6em 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.num-of-ppl label {
+  font-weight: 700;
+  margin-bottom: 0.4em;
+}
+.num-of-ppl input {
+  flex: 1;
+  padding: 0.4em;
+  text-align: right;
+  font-size: 24px;
+  font-weight: 700;
+  color: hsl(183, 100%, 15%);
+  border-radius: 5px;
+  border: none;
+  background-color: hsl(189, 41%, 97%);
+  outline: none;
+}
+.num-of-ppl .person-icon {
+  position: absolute;
+  margin-left: 1em;
+  margin-top: 2.8em;
 }/*# sourceMappingURL=main.css.map */
