--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -128,3 +128,35 @@ main{
   }
 }
 
+.num-of-ppl{
+  margin: 1.6em 0;
+  display: flex;
+  flex-direction: column;
+  //align-items: center;
+  width: 100%;
+  label{
+    font-weight: 700;
+    margin-bottom: .4em;
+  }
+
+  input{
+    flex: 1;
+    padding: 0.4em;
+    text-align: right;
+    font-size: 24px;
+    font-weight: 700;
+    color: $very-dark-cyan;
+    border-radius: 5px;
+    border: none;
+    background-color: $very-light-grayish-cyan;
+    outline: none;
+  }
+
+  .person-icon{
+    position: absolute;
+    margin-left: 1em;
+    margin-top: 2.8em;
+  }
+
+}
+
