--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -130,4 +130,49 @@ main {
   position: absolute;
   margin-left: 1em;
   margin-top: 2.8em;
+}
+
+.tip-section {
+  background-color: hsl(183, 100%, 15%);
+  padding: 2em 1em;
+  color: hsl(0, 0%, 100%);
+  font-weight: 700;
+  border-radius: 14px;
+}
+.tip-section .per-person {
+  display: block;
+  font-size: 12px;
+  color: hsl(184, 14%, 56%);
+  font-weight: 700;
+}
+.tip-section .tip-amount {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2em;
+}
+.tip-section .tip-amount .tip-total {
+  font-size: 32px;
+  color: hsl(172, 67%, 45%);
+}
+.tip-section .total-amount {
+  display: flex;
+  justify-content: space-between;
+}
+.tip-section .total-amount .bill-total {
+  font-size: 32px;
+  color: hsl(172, 67%, 45%);
+}
+.tip-section button {
+  width: 100%;
+  margin-top: 1.4em;
+  background-color: hsl(172, 67%, 45%);
+  outline: none;
+  border: none;
+  font-size: 24px;
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  color: hsl(183, 100%, 15%);
+  padding: 6px 0;
+  border-radius: 5px;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
