--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -8,18 +8,15 @@ body {
   padding: 0;
   font-family: "Space Mono", monospace;
   background-color: hsl(185, 41%, 84%);
-}
-
-main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .logo {
-  text-align: center;
-  margin-bottom: 4rem;
+  margin: 4rem 0;
 }
 
 .tip-wrapper {
