--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -20,18 +20,16 @@ body{
   padding: 0;
   font-family: "Space Mono", monospace;
   background-color: $light-grayish-cyan;
-}
-
-main{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .logo{
-  text-align: center;
-  margin-bottom: 4rem;
+  //text-align: center;
+  margin: 4rem 0;
 }
 
 .tip-wrapper{
