Adding outline styles for the Number of people input

--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -134,6 +134,9 @@ html, body {
   outline: none;
   font-family: "Space Mono", monospace;
 }
+.num-of-ppl input:hover, .num-of-ppl input :active {
+  outline: 2px solid hsl(172, 67%, 45%);
+}
 .num-of-ppl .person-icon {
   position: absolute;
   margin-left: 1em;
