Adding the clicked class to indicate that a button has been selected

--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -112,7 +112,12 @@ html, body{
     transition: background-color .5s ease-in-out;
 
     &:hover, :active{
-      background-color: $light-grayish-cyan;
+      background-color: $primary-color;
+      color: $very-dark-cyan;
+    }
+
+    .clicked{
+      background-color: $primary-color;
       color: $very-dark-cyan;
     }
   }
