--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -89,7 +89,11 @@ html, body {
   transition: background-color 0.5s ease-in-out;
 }
 .select-tip button:hover, .select-tip button :active {
-  background-color: hsl(185, 41%, 84%);
+  background-color: hsl(172, 67%, 45%);
+  color: hsl(183, 100%, 15%);
+}
+.select-tip button .clicked {
+  background-color: hsl(172, 67%, 45%);
   color: hsl(183, 100%, 15%);
 }
 .select-tip input {
