Fixing the clicked class selector to properly add the styles

--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -116,7 +116,7 @@ html, body{
       color: $very-dark-cyan;
     }
 
-    .clicked{
+    &.clicked{
       background-color: $primary-color;
       color: $very-dark-cyan;
     }
