--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -25,7 +25,7 @@ html, body{
   justify-content: center;
   align-items: center;
   height: 100vh;
-  overflow: auto;
+  //overflow: auto;
 }
 
 .logo{
