--- a/tip-calculator-app-main/css/main.scss
+++ b/tip-calculator-app-main/css/main.scss
@@ -141,6 +141,10 @@ html, body{
     &:hover, :active{
       outline: 2px solid $primary-color;
     }
+
+    &.validate{
+      outline: 2px solid red;
+    }
   }
 }
 
@@ -170,6 +174,10 @@ html, body{
 
     &:hover, :active{
       outline: 2px solid $primary-color;
+    }
+
+    &.validate{
+      outline: 2px solid red;
     }
   }
 
