--- a/tip-calculator-app-main/css/main.css
+++ b/tip-calculator-app-main/css/main.css
@@ -118,6 +118,7 @@ html, body {
 }
 
 .num-of-ppl {
+  position: relative;
   margin: 1.6em 0;
   display: flex;
   flex-direction: column;
@@ -126,6 +127,12 @@ html, body {
 .num-of-ppl label {
   font-weight: 700;
   margin-bottom: 0.4em;
+}
+.num-of-ppl .zero-ppl {
+  position: absolute;
+  right: 0;
+  color: red;
+  display: none;
 }
 .num-of-ppl input {
   flex: 1;
